# splurge-sql-runner

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  debug_config.py  mypy.ini  pyproject.toml  requirements.txt  test2.sql
.cursor/rules/: code-design.mdc  code-style.mdc  (+8 more)
docs/: README-DETAILS.md  README.md
examples/: README.md  basic_setup.sql  cleanup_and_maintenance.sql  cli_examples.md  config.json  data_analysis.sql  demo.py  deploy_database.sh  example.sql  migration_example.sql  test_cli.py
jpy_sql_runner/: __init__.py  __main__.py  cli.py  db_helper.py  sql_helper.py
logs/: deployment_report_20250811_022025.txt  deployment_report_20250811_084622.txt
splurge_sql_runner/: __init__.py  __main__.py  cli.py  cli_output.py  config.py  db_helper.py  exceptions.py  main.py  result_models.py  security.py  sql_helper.py
tests/: __init__.py  conftest.py  run_tests.py  test_cli.py  test_cli_integration.py  test_cli_main.py  test_config_constants.py  test_config_database_config.py  test_config_logging_config.py  test_config_manager.py  test_config_manager_integration.py  test_config_security_config.py  test_database_client_additional.py  test_database_client_execute_statements.py  test_database_engines.py  test_db_helper.py  test_db_helper_main.py  test_errors_base_errors.py  test_errors_database_errors.py  test_logging_context.py  test_logging_performance.py  test_security.py  test_security_main.py  test_security_utils.py  test_sql_helper.py  test_sql_helper_branches.py  test_sql_helper_main.py  test_utils.py
tools/: find_test_only_code.py
(+115 files in other folders)
