[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpy-sql-runner"
version = "0.1.0"
description = "A Python utility for executing SQL files against databases"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jim", email = "jim@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.37",
    "sqlparse>=0.4.0",
    "tabulate>=0.9.0",
]

[project.scripts]
jpy-sql-runner = "jpy_sql_runner.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jpy_sql_runner*"]

[tool.setuptools.package-data]
jpy_sql_runner = ["*.sql"]
